# QLSA

./: .env.example  .gitignore  404.html  CLAUDE.md  CNAME  Dockerfile  LICENSE  README.md  SECURITY_AUDIT.md  context.md  docker-compose.yml  index.html  requirements-api.txt  requirements-dev.txt  requirements-testnet.txt  requirements.txt
aggregator/: __init__.py  __main__.py  api.py  batcher.py  mempool.py  node.py
benchmarks/: bench_core.py  bench_poly_circuits.py  bench_stark.py  bench_witnesses.py
stark/: Cargo.toml  __init__.py  prover.py  verifier.py
stark/src/: air.rs  lib.rs  main.rs  prover_impl.rs  trace.rs
stark_stwo/: Cargo.toml  pyproject.toml
stark_stwo/src/: air.rs  lib.rs  main.rs  mldsa_az_air.rs  mldsa_az_full_air.rs  mldsa_ct1_full_air.rs  mldsa_hint_weight_air.rs  mldsa_intt_air.rs  mldsa_intt_batch_air.rs  mldsa_norm_check_air.rs  mldsa_norm_check_batch_air.rs  mldsa_ntt_air.rs  mldsa_ntt_batch_air.rs  mldsa_poly_add_air.rs  mldsa_poly_mul_air.rs  mldsa_range_q_batch_air.rs  mldsa_use_hint_air.rs  mldsa_use_hint_batch_air.rs  mldsa_verify_stark.rs  mldsa_wprime_full_air.rs  poseidon2.rs  poseidon2_air.rs  poseidon2_merkle_air.rs  poseidon2_t4.rs  poseidon2_t8.rs  range_check_air.rs  trace.rs  vfri2_bridge.rs
stark_stwo/src/mldsa/: encoding.rs  field.rs  mod.rs  ntt.rs  params.rs  poly.rs  polyvec.rs  verify.rs  xof.rs
stark_stwo/src/recursive/: channel_air.rs  fold_air.rs  fri_fold_chain_air.rs  integration.rs  merkle_path_air.rs  mod.rs  oods_air.rs  qm31_mul_air.rs  query_step_air.rs  recursive_verifier.rs  transcript_draw_air.rs
(+194 files in other folders)
