[package]
name    = "qlsa-stark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qlsa-stark"
path = "src/main.rs"

[lib]
name = "qlsa_stark"
path = "src/lib.rs"

[dependencies]
winterfell  = "0.13"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
hex         = "0.4"
base64      = "0.22"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
