[package]
name    = "qlsa-stark-stwo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qlsa-stark-stwo"
path = "src/main.rs"

[lib]
name = "qlsa_stark_stwo"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["prover"]
prover  = ["stwo/prover", "stwo-constraint-framework/prover"]
python  = ["pyo3/extension-module"]

[dependencies]
stwo                      = { version = "2.2.0", features = ["prover"] }
stwo-constraint-framework = { version = "2.2.0", features = ["prover"] }
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
hex                       = "0.4"
blake2                    = "0.10"
bincode                   = { version = "2", features = ["serde"] }
sha3                      = "0.10"
pyo3                      = { version = "0.24", optional = true }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
